feat: use virtual threads instead of fixed thread pool